Fix dark mode contrast issues for Tags and Share on text

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -303,6 +303,10 @@ li {
 /**
   * Share icons
   */
+.share-label {
+  color: #333;
+}
+
 .share-buttons {
   display: inline-block;
   vertical-align: middle;
